# Sentence

./: .gitignore  Cargo.toml  README.md  com.felipekinoshita.Sentence.json  meson.build
data/: com.felipekinoshita.Sentence.desktop.in  com.felipekinoshita.Sentence.gschema.xml  com.felipekinoshita.Sentence.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  main.rs  meson.build  sentence.gresource.xml  text_slice.rs  window.rs  window.ui
