[package]
name = "sentence"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
markdown = "1.0.0-alpha.14"
once_cell = "1.18.0"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
